--- a/index.html
+++ b/index.html
@@ -1,100 +1,100 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Filip Kjamilov</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="icon" type="image/png" href="images/fulls/icon.png">
-	</head>
-	<body class="is-preload">
+<head>
+	<title>Filip Kjamilov</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="icon" type="image/png" href="images/fulls/icon.png">
+</head>
+<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1>
-						Hi. I'm <strong>Filip Kjamilov</strong>
-						<br />
-					<i class="fa fa-apple" style="font-size:24px"> </i> <strong>iOS Engineer</strong><br />
-					</h1>
-				</div>
+	<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<span href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+			<h1>
+				Hi. I'm <strong>Filip Kjamilov</strong>
+				<br />
+				<i class="fa fa-apple" style="font-size:24px"> </i> <strong>iOS Engineer</strong><br />
+			</h1>
+		</div>
+	</header>
+
+	<!-- Main -->
+	<div id="main">
+
+		<!-- One -->
+		<section id="one">
+			<header class="major">
+				<h2>About me</h2>
 			</header>
+			<p>I'm an iOS Engineer with 2+ years experience with Swift. I love bringing apps from concept to completion. I like to be creative with technology, and automate the process of development. I am based in Düsseldorf, but always up for adventures abroad.</p>
+		</section>
 
-		<!-- Main -->
-			<div id="main">
+		<section id="two">
+			<h1>Projects</h1>
+			<section>
+				<h2>At Netcetera</h2>
+				<div class="row">
+					<article class="col-6 col-12-xsmall work-item">
+						<a href="images/fulls/01.png" class="image fit thumb"><img src="images/fulls/01.png" alt="" /></a>
+						<h3>ToPay Mobile Wallet</h3>
+						<p>Let your customers experience the future of mobile payment. ToPay Mobile Wallet is SDK that is highly configurable, fully brandable, and secure mobile wallet.</p>
+						<br/>
+						<a target="_blank" rel="noopener noreferrer" href="https://www.netcetera.com/home/Digital-Banking/topay-mobile-wallet.html" class="button primary fit small">Discover more</a>
+					</article>
+				</div>
+			</section>
 
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>About me</h2>
-						</header>
-						<p>I'm an iOS Engineer with 2+ years experience with Swift. I love bringing apps from concept to completion. I like to be creative with technology, and automate the process of development. I am based in Düsseldorf, but always up for adventures abroad.</p>
-					</section>
+			<section>
+				<h2>Private</h2>
+				<div class="row">
+					<article class="col-6 col-12-xsmall work-item">
+						<a href="images/fulls/02.png" class="image fit thumb"><img src="images/thumbs/02.png" alt="" /></a>
+						<h3>WalletLess</h3>
+						<p>The WalletLess App is built with the latest technologies from Swift and SwiftUI. With the help of CoreLocation framework provided by Apple, the app uses the device location to sort the cards according to your current location and list the nearest merchants accordingly.</p>
+						<br/>
+						<a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/mk/app/walletless-cards/id1622182327" class="button primary fit small">Check the app</a>
+					</article>
+				</div>
+			</section>
+		</section>
 
-					<section id="two">
-						<h1>Projects</h1>
-						<section>
-							<h2>At Netcetera</h2>
-							<div class="row">
-								<article class="col-6 col-12-xsmall work-item">
-									<a href="images/fulls/01.png" class="image fit thumb"><img src="images/fulls/01.png" alt="" /></a>
-									<h3>ToPay Mobile Wallet</h3>
-									<p>Let your customers experience the future of mobile payment. ToPay Mobile Wallet is SDK that is highly configurable, fully brandable, and secure mobile wallet.</p>
-									<br/>
-									<a target="_blank" rel="noopener noreferrer" href="https://www.netcetera.com/home/Digital-Banking/topay-mobile-wallet.html" class="button primary fit small">Discover more</a>
-								</article>
-							</div>
-						</section>
-
-						<section>
-							<h2>Private</h2>
-							<div class="row">
-								<article class="col-6 col-12-xsmall work-item">
-									<a href="images/fulls/02.png" class="image fit thumb"><img src="images/thumbs/02.png" alt="" /></a>
-									<h3>WalletLess</h3>
-									<p>The WalletLess App is built with the latest technologies from Swift and SwiftUI. With the help of CoreLocation framework provided by Apple, the app uses the device location to sort the cards according to your current location and list the nearest merchants accordingly.</p>
-									<br/>
-									<a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/mk/app/walletless-cards/id1622182327" class="button primary fit small">Check the app</a>
-								</article>
-							</div>
-						</section>
-					</section>
-
-					<section id="four">
-						<h2>Education</h2>
-						<header>
-							<h4>Faculty of Computer Science & Engineering</h4>
-							<p>Skopje, Macedonia (2016-2022)</p>
-							<h4>Title: Graduated engineer in information sciences and computer engineering<br>
-								<p><i>Direction: Application of information technologies</i></p></h4>
-						</header>
-					</section>
-					<a target="_blank" rel="noopener noreferrer" href="https://tinyurl.com/filipkjamilov-LCV" class="button" style="width: 100%;">Curriculum vitae</a>
-			</div>
+		<section id="four">
+			<h2>Education</h2>
+			<header>
+				<h4>Faculty of Computer Science & Engineering</h4>
+				<p>Skopje, Macedonia (2016-2022)</p>
+				<h4>Title: Graduated engineer in information sciences and computer engineering<br>
+					<p><i>Direction: Application of information technologies</i></p></h4>
+				</header>
+			</section>
+			<a target="_blank" rel="noopener noreferrer" href="CV/CV.html" class="button" style="width: 100%;">Curriculum vitae</a>
+		</div>
 
 		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/filip-kjamilov-379757157/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/filipkjamilov" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto: filipkjamilov@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Filip Kjamilov</li>
-					</ul>
-				</div>
-			</footer>
+		<footer id="footer">
+			<div class="inner">
+				<ul class="icons">
+					<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/filip-kjamilov-379757157/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/filipkjamilov" class="icon brands fa-github"><span class="label">Github</span></a></li>
+					<li><a href="mailto: filipkjamilov@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; Filip Kjamilov | &#x1F7E2;Last update: 01.10.2022</li>
+				</ul>
+			</div>
+		</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.poptrox.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
-</html>
+	</html>
