--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<p><i>Direction: Application of information technologies</i></p></h4>
 				</header>
 			</section>
-			<a target="_blank" rel="noopener noreferrer" href="CV/CV.html" class="button" style="width: 100%;">Curriculum vitae</a>
+			<a target="_blank" rel="noopener noreferrer" href="CV/cv.html" class="button" style="width: 100%;">Curriculum vitae</a>
 		</div>
 
 		<!-- Footer -->
