UPDATE portfolio and CV

--- a/CV/cv.html
+++ b/CV/cv.html
@@ -93,14 +93,14 @@
 					<span>
 						<img class="image main" src="images/netcetera.png" alt="Netcetera" style="width: 40%; margin: 0px; display: inline;" /> 
 						<br>
-						<h3 style="margin-bottom: 0px;">Brainworks.Studio, Saratoga Springs - NY</h3>
+						<h3 style="margin-bottom: 0px;">Netcetera AG, Skopje - MKD</h3>
 						<sup>2020 - 2022</sup>
 						<h5><i>Title:</i> Software Engineer | <i>Role:</i> iOS Engineer</h5>
 					</span>
 					<p>With the start of 2020 I shifted my primary focus to iOS Development. Worked on SDK for mobile banking.</p>
 					<hr/>
 					<span>
-						<img class="image main" src="images/brainworks.png" alt="Netcetera" style="width: 40%; margin: 0px; display: inline;" /> 
+						<img class="image main" src="images/brainworks.png" alt="Brainworks.Studio" style="width: 40%; margin: 0px; display: inline;" /> 
 						<br>
 						<h3 style="margin-bottom: 0px;">Brainworks.Studio, Saratoga Springs - NY</h3>
 						<sup>2018 - 2018 | 4<sup>mon</sup></sup>
