UPDATE CV & Portfolio 17.03.2023

--- a/CV/cv.html
+++ b/CV/cv.html
@@ -52,16 +52,21 @@
 				<!-- about -->
 				<article id="about">
 					<h2 class="major">About me</h2>
-					<p>I'm an iOS Engineer with 2+ years experience with Swift. I love bringing apps from concept to completion. I like to be creative with technology, and automate the process of development. I am based in Düsseldorf, but always up for adventures abroad.</p>
+					<p>I'm an experienced iOS Engineer with several years of experience in iOS development, I am skilled at bringing apps from concept to completion. I have a passion for creativity and enjoy automating the development process. </p>
+					<p>My coding style is clean, maintainable, and efficient, with a focus on adhering to SOLID principles and clean code practices. My extensive knowledge of testing methodologies, including UNIT, UI, and Snapshot testing, ensures that I develop high-quality and bug-free applications. </p>
+					<p>Additionally, I have expertise in automation using Jenkins, Bitrise, Xray, Browserstack, SonarQube, and Sonarcloud. I am proficient in writing automation scripts and pipelines using fastlane and Ruby, enabling me to develop quickly while maintaining a clean and stable codebase.</p>
+
+					<h3 class="major">Soft skills and leadership</h3>
+					<p>In addition, I have a strong background in mentoring and was a mentor in an internship program at Netcetera in 2022. I am always eager to help and grow those around me. My soft skills include being highly communicative, promoting transparent and open conversations with all team members, and delivering results. I am also consistently curious and strive to stay up-to-date with the latest technology stacks.</p>
 
 					<div class="row">
 						<div class="col-6 col-12-xsmall work-item">
-							<h3 class="major">Strengths</h3>
+							<h3 class="major">HOBBIES</h3>
 							<span>
 								<ul>
-									<li>Delivering Results</li>
-									<li>Team colaboration</li>
-									<li>Learn and be Curious</li>
+									<li>Reading</li>
+									<li>Reparing old stuff</li>
+									<li>DIY</li>
 								</ul>
 							</span>
 						</div>
@@ -76,24 +81,24 @@
 							</span>
 						</div>
 					</div>
-					
-					<h3 class="major">HOBBIES</h3>
-					<span>
-						<ul>
-							<li>Reading</li>
-							<li>Reparing old stuff</li>
-							<li>DIY</li>
-						</ul>
-					</span>
 				</article>
 
 				<!-- experience -->
 				<article id="experience">
 					<h2 class="major">Work Experience</h2>
 					<span>
+						<img class="image main" src="images/rebuy.png" alt="Rebuy" style="width: 40%; margin: 0px; display: inline;" /> 
+						<br>
+						<h3 style="margin-bottom: 0px;">Rebuy recommerce gmbh - Berlin, DE (Remote)</h3>
+						<sup>2023 - present</sup>
+						<h5><i>Title:</i> iOS Engineer</h5>
+					</span>
+					<p>As a native iOS developer @rebuy, one of the most sustainable companies in Germany, I am excited to work on our iOS application and contribute to our mission of reducing waste and promoting environmental responsibility.</p>
+					<hr/>
+					<span>
 						<img class="image main" src="images/netcetera.png" alt="Netcetera" style="width: 40%; margin: 0px; display: inline;" /> 
 						<br>
-						<h3 style="margin-bottom: 0px;">Netcetera AG, Skopje - MKD</h3>
+						<h3 style="margin-bottom: 0px;">Netcetera AG, Skopje - Skopje, MKD (Remote)</h3>
 						<sup>2020 - 2022</sup>
 						<h5><i>Title:</i> Software Engineer | <i>Role:</i> iOS Engineer</h5>
 					</span>
@@ -112,6 +117,13 @@
 				<!-- projects -->
 				<article id="projects">
 					<h2 class="major">Projects</h2>
+					<h3 class="major">@rebuy</h3>
+					<span>
+						<h3 style="margin-bottom: 0px;"><a target="_blank" rel="noopener noreferrer" href="https://www.rebuy.de/">Rebuy recommerce gmbh</a></h3>
+						<sup>2023 - present</sup>
+						<p style="margin-bottom: 0px"><strong><i>Project description: </i></strong>Our iOS native e-commerce app is a one-stop-shop for trading your consumer electronics and media, with two carts that allow you to buy and sell with ease. Our app is designed with cool and user interactive features, making it simple and enjoyable to use. Built on the Redux architecture, we use Swinject and SwinjectAutoregistration for injection, resulting in an efficient and streamlined development process. With 85% code coverage and numerous snapshot tests, we ensure a high level of quality and reliability. Our app utilizes the latest technologies such as SwiftUI and Combine, providing a cutting-edge user experience.</p>
+					</span>
+					<hr>
 					<h3 class="major">@ Netcetera</h3>
 					<span>
 						<h3 style="margin-bottom: 0px;"><a target="_blank" rel="noopener noreferrer" href="https://www.netcetera.com/home/Digital-Banking/topay-mobile-wallet.html" id="tpmw">ToPay Mobile Wallet</a></h3>
@@ -170,7 +182,7 @@
 
 			<!-- Footer -->
 			<footer id="footer">
-				<p class="copyright">&copy; Filip Kjamilov | &#x1F7E2;Last update: 01.10.2022 </p>
+				<p class="copyright">&copy; Filip Kjamilov | &#x1F7E2;Last update: 17.03.2023 </p>
 			</footer>
 
 		</div>
