--- a/index.html
+++ b/index.html
@@ -30,20 +30,45 @@
 			<header class="major">
 				<h2>About me</h2>
 			</header>
-			<p>I'm an iOS Engineer with 2+ years experience with Swift. I love bringing apps from concept to completion. I like to be creative with technology, and automate the process of development. I am based in Düsseldorf, but always up for adventures abroad.</p>
+
+			<p>As an iOS Engineer with several years of experience, I have honed my skills in building complex mobile applications and SDKs, developing new features, and refactoring existing codebases. I am passionate about writing clean, maintainable, and efficient code that adheres to SOLID principles and clean code practices.</p>
+
+			<p>
+			As a collaborative team player, I always focus on delivering results while continuously learning and improving the codebase. I am dedicated to bringing new technologies to the table that can facilitate the development process and help us build better applications.</p>
+
 		</section>
 
 		<section id="two">
 			<h1>Projects</h1>
+			<section>
+				<h2>@rebuy</h2>
+				<div class="row">
+					<article class="col-6 col-12-xsmall work-item">
+						<a href="images/fulls/04.png" class="image fit thumb"><img src="images/fulls/04.png" alt="" /></a>
+						<h3>Rebuy app</h3>
+						<p>The rebuy app provides users with the unique opportunity to both buy and sell electronics and media in one place. Dedicated to the reselling of items, making it a one-stop-shop for those looking to give their unwanted tech a new life while also providing great deals on gently used items.</p>
+						<br/>
+						<a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/de/app/rebuy-de/id859123857" class="button primary fit small">Check the app</a>
+					</article>
+				</div>
+			</section>
+
 			<section>
 				<h2>At Netcetera</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall work-item">
 						<a href="images/fulls/01.png" class="image fit thumb"><img src="images/fulls/01.png" alt="" /></a>
 						<h3>ToPay Mobile Wallet</h3>
-						<p>Let your customers experience the future of mobile payment. ToPay Mobile Wallet is SDK that is highly configurable, fully brandable, and secure mobile wallet.</p>
+						<p>ToPay Mobile Wallet is a comprehensive digital banking solution that enables the creation of complex mobile wallets quickly and easily.</p>
 						<br/>
-						<a target="_blank" rel="noopener noreferrer" href="https://www.netcetera.com/home/Digital-Banking/topay-mobile-wallet.html" class="button primary fit small">Discover more</a>
+						<a target="_blank" rel="noopener noreferrer" href="https://www.netcetera.com/home/Digital-Banking/topay-mobile-wallet.html" class="button primary fit small">Product overview</a>
+					</article>
+					<article class="col-6 col-12-xsmall work-item">
+						<a href="images/fulls/03.png" class="image fit thumb"><img src="images/fulls/03.png" alt="" /></a>
+						<h3>debiX+</h3>
+						<p>Integration app that usses the ToPay Mobile Wallet SDK</p>
+						<br/>
+						<a target="_blank" rel="noopener noreferrer" href="https://www.six-group.com/en/site/debix-plus/app-download.html" class="button primary fit small">Check the app</a>
 					</article>
 				</div>
 			</section>
@@ -54,9 +79,9 @@
 					<article class="col-6 col-12-xsmall work-item">
 						<a href="images/fulls/02.png" class="image fit thumb"><img src="images/thumbs/02.png" alt="" /></a>
 						<h3>WalletLess</h3>
-						<p>The WalletLess App is built with the latest technologies from Swift and SwiftUI. With the help of CoreLocation framework provided by Apple, the app uses the device location to sort the cards according to your current location and list the nearest merchants accordingly.</p>
+						<p>The WalletLess App utilizes the latest technologies in Swift and SwiftUI. It leverages the CoreLocation framework provided by Apple to determine the user's current location and sort their loyalty cards accordingly. This feature allows for easy access to the user's loyalty cards based on their proximity to various locations.</p>
 						<br/>
-						<a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/mk/app/walletless-cards/id1622182327" class="button primary fit small">Check the app</a>
+						<a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/en/app/walletless-app/id1622182327?l=en" class="button primary fit small">Check the app</a>
 					</article>
 				</div>
 				<a target="_blank" rel="noopener noreferrer" href="CV/cv.html" class="button" style="width: 100%;">Curriculum vitae</a>
@@ -72,7 +97,7 @@
 					<li><a href="mailto: filipkjamilov@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Filip Kjamilov | &#x1F7E2;Last update: 01.10.2022</li>
+					<li>&copy; Filip Kjamilov | &#x1F7E2;Last update: 17.03.2023</li>
 				</ul>
 			</div>
 		</footer>
