--- a/CV/cv.html
+++ b/CV/cv.html
@@ -41,7 +41,7 @@
 						<li><a href="#experience">Experience</a></li>
 						<li><a href="#projects">Projects</a></li>
 						<li><a href="#education">Education</a></li>
-						<li><a target="_blank" rel="noopener noreferrer" href="http://filipkjamilov.com/">Portfolio</a></li>
+						<li><a href="#techicalExpertise">Technical Expertise</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -54,33 +54,12 @@
 					<h2 class="major">About me</h2>
 					<p>I'm an experienced iOS Engineer with several years of experience in iOS development, I am skilled at bringing apps from concept to completion. I have a passion for creativity and enjoy automating the development process. </p>
 					<p>My coding style is clean, maintainable, and efficient, with a focus on adhering to SOLID principles and clean code practices. My extensive knowledge of testing methodologies, including UNIT, UI, and Snapshot testing, ensures that I develop high-quality and bug-free applications. </p>
-					<p>Additionally, I have expertise in automation using Jenkins, Bitrise, Xray, Browserstack, SonarQube, and Sonarcloud. I am proficient in writing automation scripts and pipelines using fastlane and Ruby, enabling me to develop quickly while maintaining a clean and stable codebase.</p>
 
 					<h3 class="major">Soft skills and leadership</h3>
 					<p>In addition, I have a strong background in mentoring and was a mentor in an internship program at Netcetera in 2022. I am always eager to help and grow those around me. My soft skills include being highly communicative, promoting transparent and open conversations with all team members, and delivering results. I am also consistently curious and strive to stay up-to-date with the latest technology stacks.</p>
 
-					<div class="row">
-						<div class="col-6 col-12-xsmall work-item">
-							<h3 class="major">HOBBIES</h3>
-							<span>
-								<ul>
-									<li>Reading</li>
-									<li>Reparing old stuff</li>
-									<li>DIY</li>
-								</ul>
-							</span>
-						</div>
-						<div class="col-6 col-12-xsmall work-item">
-							<h3 class="major">Languages</h3>
-							<span>
-								<ul>
-									<li>Macedonian</li>
-									<li>English</li>
-									<li>Serbian</li>
-								</ul>
-							</span>
-						</div>
-					</div>
+					<p><strong>Documentation and Feedback:</strong> Committed to maintaining comprehensive and up-to-date documentation for all projects. I actively seek feedback to ensure clarity and accuracy, fostering a culture of knowledge sharing and continuous improvement.</p>
+					<p><strong>Collaboration and Improvement:</strong> Regularly organize meetings with team members to discuss complex topics, gather insights, and explore improvement ideas. I advocate for pair programming to tackle challenging tasks more efficiently, fostering a collaborative environment that enhances productivity.</p>
 				</article>
 
 				<!-- experience -->
@@ -173,12 +152,40 @@
 							Application of information technologies
 						</p>
 					</span>
+					<p>Dedicated to continuous professional development, I have completed multiple courses focused on iOS development and actively participated in various industry conferences, including iOSKonf. I also follow CocoaHeads members to stay updated on the latest trends and best practices, ensuring I bring innovative solutions to my work.</p>
 				</article>
+				
+
+				<article id="techicalExpertise">
+					<h2 class="major">Technical Expertise</h2>
+					<p>I have a deep understanding of iOS development with extensive experience in SwiftUI and app development from concept to delivery. My coding practices emphasize clean, maintainable, and efficient code, while focusing on SOLID principles and clean code methodologies.</p>
+					<ul>
+						<li><strong>SwiftUI Best Practices & Design Systems:</strong> Expertise in creating scalable design systems with SwiftUI, ensuring consistency and modularity. I can develop standalone design system modules that can be easily imported and integrated into any iOS app.</li>
+						<li><strong>Swift Macros Development:</strong> Skilled in developing Swift Macros to enhance productivity and code efficiency, allowing developers to automate repetitive tasks and streamline code generation.</li>
+						<li><strong>A/B Testing and Feature Rollouts with Amplitude:</strong> Extensive experience with A/B testing, implementing controlled experiments using Amplitude to gather actionable insights. Additionally, proficient in leveraging feature flags for gradual rollouts of new features, enabling dynamic toggling of features based on performance metrics and user feedback, ensuring a smooth, data-driven release strategy.</li>
+						<li><strong>Authentication Systems:</strong> Implementation of secure login systems including Google Sign-In and Apple Sign-In.</li>
+						<li><strong>Sentry Integration:</strong> Experience with Sentry for proactive error tracking and resolution in production environments.</li>
+						<li><strong>Snapshot Testing:</strong> Employing snapshot testing to guarantee UI consistency and stability across releases.</li>
+						<li><strong>UI Testing:</strong> Proficient in writing UI tests with XCTest, including setting up BrowserStack for cross-device testing within CI pipelines. Experienced with Maestro for mobile UI testing, focusing on practical, efficient testing of both native and hybrid apps.</li>
+						<li><strong>Swinject Dependency Injection:</strong> Expert at using Swinject for decoupled dependency management and testability.</li>
+					</ul>
+
+					<h3 class="major">CI/CD Expertis</h3>
+					<ul>
+						<li>Utilizing Bitrise for building, testing, and analyzing iOS applications.</li>
+						<li>Setting up quality checks for pull requests to ensure code integrity.</li>
+						<li>Implementing nightly jobs for beta releases, with automatic uploads to TestFlight if there are changes to the master branch within the last 24 hours.</li>
+						<li>Integrating SonarCloud for code quality analysis.</li>
+						<li>Automating the release process, including app version increment, code signing, and submission for review on App Store Connect with a single workflow.</li>
+						<li>Managing beta releases as needed for testing on TestFlight.</li>
+					</ul>
+				</article>
+				
 			</div>
 
 			<!-- Footer -->
 			<footer id="footer">
-				<p class="copyright">&copy; Filip Kjamilov | &#x1F7E2;Last update: 17.03.2023 </p>
+				<p class="copyright">&copy; Filip Kjamilov | &#x1F7E2;Last update: 16.10.2024 </p>
 			</footer>
 
 		</div>
